# strata-host-core

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  JenkinsfileOTA  README.md  README_deprecation.md  Readme.md  Spyglass_Configure.launch  Spyglass_Debug_Flash_Utility.launch  Spyglass_Release_Flash_Utility.launch  bootstrap-host-ota-readme.md  bootstrap-host-ota.bat  bootstrap-host-ota.sh  bootstrap-host.bat  bootstrap-host.sh
apps/: CMakeLists.txt
apps/CommandDocCreator/: CMakeLists.txt  CdcAboutWindow.qml  CdcMain.qml  CdcSettingsDialog.qml  MdExampleWindow.qml  main.cpp  main.qml  qml.qrc
apps/CommandDocCreator/logging/: LoggingQtCategories.cpp  LoggingQtCategories.h
apps/CouchbaseBrowser/: CMakeLists.txt  images.qrc  main.cpp  qmlui.qrc
apps/CouchbaseBrowser/qml/: BodyDisplay.qml  MainWindow.qml  (+3 more)
apps/DeveloperStudio/: CMakeLists.txt  ErrorDialog.qml  SGLogin.qml  SGPlatformSelector.qml  SGStatusBar.qml  SplashScreen.qml  main.cpp  main.qml  qml-dev-studio-images.qrc  qml-dev-studio-plugin-cvc-static.qrc  qml-dev-studio-plugin-cvc.qrc  qml-dev-studio-plugin-debugbar.qrc  qml-dev-studio-resources.qrc  qml-dev-studio.qrc
apps/Flasher/: CMakeLists.txt  Readme.md
apps/LogViewer/: CMakeLists.txt  Divider.qml  FileModel.cpp  FileModel.h  LogLevel.cpp  LogLevel.h  LogListView.qml  LogModel.cpp  LogModel.h  LogViewerAboutWindow.qml  LogViewerMain.qml  LogViewerSettingsDialog.qml  main.cpp  main.qml  qml.qrc
apps/LoggingConfigurationUtility/: CMakeLists.txt  ConfigFileModel.cpp  ConfigFileModel.h  ConfigFileSettings.cpp  ConfigFileSettings.h  CorruptedFileDialog.qml  LcuAboutWindow.qml  LcuMain.qml  LcuModel.cpp  LcuModel.h  LogFilesCompress.cpp  LogFilesCompress.h  iniFiles.cpp  iniFiles.h  main.cpp  main.qml  qml.qrc
apps/PlatformInterfaceGenerator/: CMakeLists.txt  CommandNotificationDelegate.qml  DebugMenuGenerator.cpp  PlatformInterfaceCreator.qml  PlatformInterfaceGenerator.cpp  PlatformInterfaceGenerator.h  main.cpp
apps/PlatformRegistrationTool/: Arrow.qml  AssistedModeStateMachine.qml  Authenticator.cpp  Authenticator.h  BaseStateMachine.qml  CMakeLists.txt  CanvasShapes.js  ControllerModeStateMachine.qml  EmbeddedModeStateMachine.qml  FeedbackArrow.qml  LoginScreen.qml  ProgramDeviceWizard.qml  ProgramSettingsDelegate.qml  ProgramSettingsJlinkPathDelegate.qml  ProgramSettingsOpnDelegate.qml  ProgramSettingsQuestionDelegate.qml  ProgramSettingsWizard.qml  ProgramWorkflow.qml  PrtAboutWindow.qml  PrtMain.qml  PrtModel.cpp  PrtModel.h  PrtSettingsDialog.qml  RestClient.cpp  RestClient.h  TaskbarButton.qml  TaskbarButtonDummy.qml  UserMenuButton.qml  WorkflowNode.qml  WorkflowNodeText.qml  jsonSchemas.js  main.cpp  main.qml  qml.qrc
apps/SerialConsoleInterface/: CMakeLists.txt  ConnectBleDeviceDialog.qml  ExportView.qml  FilterDialog.qml  FilterView.qml  HexModel.cpp  HexModel.h  HexView.qml  InfoPopup.qml  MessageEditor.qml  MessageQueueView.qml  MockSettingsView.qml  PlatformDelegate.qml  PlatformInfoWindow.qml  ProgramDeviceView.qml  SaveFirmwareView.qml  SciAboutWindow.qml  SciBleDeviceModel.cpp  SciBleDeviceModel.h  SciCommandHistoryModel.cpp  SciCommandHistoryModel.h  SciConnectMockDeviceDialog.qml  SciDatabaseConnector.h  SciFilterScrollbackModel.cpp  SciFilterScrollbackModel.h  SciFilterSuggestionModel.cpp  SciFilterSuggestionModel.h  SciMain.qml  SciMessageQueueModel.cpp  SciMessageQueueModel.h  SciMockCommandModel.cpp  SciMockCommandModel.h  SciMockDevice.cpp  SciMockDevice.h  SciMockDeviceModel.cpp  SciMockDeviceModel.h  SciMockResponseModel.cpp  SciMockResponseModel.h  SciMockVersionModel.cpp  SciMockVersionModel.h  (+29 more)
apps/WidgetGallery/: CMakeLists.txt  WgAboutWindow.qml  WgMain.qml  WgModel.cpp  WgModel.h  WgSettingsDialog.qml  main.cpp  main.qml  qml.qrc
apps/hcs3/: CMakeLists.txt
components/: CMakeLists.txt
components/addons/: CMakeLists.txt
components/common/: CMakeLists.txt
components/commoncpp/: CMakeLists.txt  CommonCppPlugin.cpp  CommonCppPlugin.h
components/fonts/: CMakeLists.txt
components/ftdi/: CMakeLists.txt
components/libs/: CMakeLists.txt
components/logconf/: CMakeLists.txt
components/monaco/: CMakeLists.txt
components/openssl/: CMakeLists.txt
components/qt/: CMakeLists.txt
components/sgwidgets/: CMakeLists.txt
components/theme/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/vcredist/: CMakeLists.txt
host/: CMakeLists.txt  Readme.md  bootstrap-ota.bat  bootstrap-ota.sh  bootstrap.bat  bootstrap.sh  windows_build.sh
host/CMakeModules/: FindCurl.cmake  FindLibevent2.cmake  FindRapidJSON.cmake  FindSerialPort.cmake  FindZMQHelper.cmake  FindZeroMQ.cmake
host/CouchBaseLite/: CMakeLists.txt  Readme.md
host/Flasher/: CMakeLists.txt
host/HostControllerService/: CMakeLists.txt  README.md  build_hcs.sh  build_hcs_on_windows.bat  build_hcs_on_windows.sh  run_hcs.sh  x86_64.cmake
host/HostNotification/: HostControllerClient.cpp  Training.pro  UserInterfaceBinding.h  main.cpp  main.qml  zhelpers.hpp
host/SerialConsoleInterface/: CMakeLists.txt  PlatformController.h  SGOutputLogBox.qml  SerialConsoleInterface.pro  main.qml  qml.qrc
host/apps/: CMakeLists.txt
host/components/: CMakeLists.txt
host/hcs2/: CMakeLists.txt  Logger.h
host/include/: HostControllerClient.hpp
host/libs/: CMakeLists.txt
host/research_spikes/: CMakeLists.txt
host/samples/: CMakeLists.txt  README.md
host/test/: CMakeLists.txt
host/ui/: CMakeLists.txt
host/ui_resources/: README.md
host/utils/: CMakeLists.txt
libs/: CMakeLists.txt
libs/Board/: CMakeLists.txt
libs/CommandValidator/: CMakeLists.txt
libs/Database/: CMakeLists.txt
libs/DownloadManager/: CMakeLists.txt
libs/EventsMgr/: CMakeLists.txt
libs/PlatformInterface/: CMakeLists.txt
libs/PlatformValidation/: CMakeLists.txt
libs/SGCore/: CMakeLists.txt  ErrorDialog.qml  qml_minimal_ui.qrc
libs/StrataRPC/: CMakeLists.txt
libs/base64/: CMakeLists.txt
libs/connector/: CMakeLists.txt
libs/crc16/: CMakeLists.txt
libs/flasher/: CMakeLists.txt
libs/loggers/: CMakeLists.txt  README.md
(+4931 files in other folders)
