add_subdirectory(base64)
add_subdirectory(crc16)
add_subdirectory(connector)
add_subdirectory(flasher)
if((APPS_CORESW AND APPS_CORESW_SDS) OR APPS_UTILS)
    add_subdirectory(HostControllerClient)
    add_subdirectory(PlatformInterface)
endif()
add_subdirectory(CommandValidator)
add_subdirectory(loggers)
add_subdirectory(Board)
if((APPS_CORESW AND APPS_CORESW_HCS) OR (APPS_TOOLBOX AND APPS_TOOLBOX_PRT))
    add_subdirectory(DownloadManager)
endif()
if((APPS_CORESW AND APPS_CORESW_HCS) OR BUILD_RS)
    add_subdirectory(Database)
endif()
add_subdirectory(StrataRPC)
